Revision history for Perl extension MooseX-Getopt

  * Pod fix from debian. Salvatore Bonaccorso <carnil@debian.org> RT#74681
  * Spelling fix from debian. Jonathan Yu <jawnsy@cpan.org> RT#74681

0.39 Fri 03 Feb 2012
  * Fix argument parsing in process_argv when used with ConfigFromFile so that
    -v can be used as expected, rather than being grabbed as --version

0.38 Fri 23 Dec 2011
  * More documentation on Getopt::Long settings and how they alter this role's
    behaviour, in particular with regards to extra_argv capturing.
    (Karen Etheridge)

0.37 Wed 30 Mar 2011
  * Fix missing dependency. (RT#67077)

0.36 Tue 29 Mar 2011
  * Fix dist.ini 'Prereq' into 'Prereqs' (Damien Krotkine)
  * MooseX::Getopt::GLD
    - change it to a MooseX::Role::Parameterized, so that it accepts
      'getopt_conf' parameter (Damien Krotkine)

0.35 Wed 09 Feb 2011
  * Fix missed change from Test::Exception to Test::Fatal

0.34 Tue 08 Feb 2011
  * The test suite now uses Test::Fatal instead of Test::Exception. (Karen
    Etheridge)
  * Move most of new_with_options logic into separate publically
    accessible process_argv method, so that arg processing can be
    done without actually creating object (Jonathan Swartz)

0.33 Thu 26 Aug 2010
  * Remove Test::Most from newly added test (RT#60766)

0.32 Thu 26 Aug 2010
  * Fix handling of Union types (RT#58417)

0.31 Wed 7 Jul 2010
  * Fix issue causing tests to fail if MooseX::SimpleConfig isn't installed.

0.30 Tue 6 Jul 2010
  * MooseX::Getopt::Basic
    - uses attribute insertion order when determining the order in which
      options are documented in the usage (e.g. in $obj->usage->text). (Karen
      Etheridge)

  * MooseX::Getopt::Basic
    - store the usage object to the usage attr (RT#58715)
    - properly checks whether the *option* --help, --usage, or --? were used,
      rather than the attribute 'help', 'usage' or '?' were set
  * MooseX::Getopt::GLD